--- a/src/Saga.Orchestrator/Saga.Orchestrator.csproj
+++ b/src/Saga.Orchestrator/Saga.Orchestrator.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="stateless" Version="5.11.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
